--- a/package.json
+++ b/package.json
@@ -16,13 +16,10 @@
         "wiredep": "latest",
         "require-dir": "latest",
         "del": "latest",
-        "vinyl-paths": "latest",
         "compression": "latest",
         "opn": "latest",
         "gulp": "latest",
-        "gulp-bower-files": "latest",
         "gulp-load-plugins": "latest",
-        "gulp-install": "latest",
         "gulp-jshint": "latest",
         "gulp-sync": "latest",
         "gulp-useref": "latest",
@@ -36,13 +33,14 @@
         "gulp-add-src": "latest",
         "gulp-newer": "latest",
         "gulp-nodemon": "latest",
-        "gulp-flatten": "latest",
         "gulp-sourcemaps": "latest",
-        "gulp-ng-html2js": "latest"
+        "gulp-ng-html2js": "latest",
+        "gulp-sitemap": "latest",
+        "gulp-ftp": "latest"
     },
     "devDependencies": {
-        "errorhandler":"latest",
-        "morgan":"latest",
+        "errorhandler": "latest",
+        "morgan": "latest",
         "jshint-stylish": "latest",
         "less": "latest",
         "jade": "latest",
