--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
         "compression": "latest",
         "opn": "latest",
         "vinyl-ftp": "latest",
-        "prerender-node": "latest",
         "lazypipe": "latest",
+        "phantom": "latest",
         "gulp": "latest",
+        "gulp-express": "latest",
         "gulp-load-plugins": "latest",
         "gulp-jshint": "latest",
         "gulp-sync": "latest",
