--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,5 +1,12 @@
 RewriteEngine On
 Options +FollowSymLinks
-RewriteCond %{REQUEST_URI}  ^/$
-RewriteCond %{QUERY_STRING} ^_escaped_fragment_=/?(.*)$
-RewriteRule ^(.*)$ /snapshots/%1? [NC,L]
+
+RewriteCond %{QUERY_STRING} ^_escaped_fragment_=(.*)$
+RewriteRule ^$ /snapshots/index.html? [L,NC]
+RewriteCond %{QUERY_STRING} ^_escaped_fragment_=(.*)$
+RewriteRule ^(.*)$ /snapshots/$1.html? [L,NC]
+
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
+RewriteRule ^ index.html [L]
