--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "opn": "latest",
         "vinyl-ftp": "latest",
         "lazypipe": "latest",
-        "merge-stream": "latest",
         "streamqueue": "latest",
         "phantom": "latest",
         "phantomjs": "latest",
+        "multimatch": "latest",
         "gulp": "latest",
         "gulp-filter": "latest",
         "gulp-watch": "latest",
