--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
         "phantom": "latest",
         "phantomjs": "latest",
         "multimatch": "latest",
+        "run-sequence": "latest",
         "gulp": "latest",
         "gulp-filter": "latest",
         "gulp-watch": "latest",
         "gulp-inject": "latest",
         "gulp-if": "latest",
+        "gulp-sync": "latest",
         "gulp-prompt": "latest",
         "gulp-load-plugins": "latest",
         "gulp-jshint": "latest",
-        "gulp-sync": "latest",
         "gulp-useref": "latest",
         "gulp-minify-css": "latest",
         "gulp-ng-annotate": "latest",
