--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "romaleev.com",
+    "name": "gulp-angular-seo",
     "version": "1.0.0",
     "author": "Roman Malieiev",
     "ignore": [
