--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "angular": "latest",
 		"angular-ui-router": "latest",
+        "angular-sanitize": "latest",
         "bootstrap": "latest",
         "fontawesome": "latest"
     }
