gulp-seo error handling impr., console colors

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "mkdirp": "latest",
         "multimatch": "latest",
         "run-sequence": "latest",
+        "cli-color": "latest",
         "progress": "latest",
         "gulp": "latest",
         "gulp-if": "latest",
