--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
         "cli-color": "latest",
         "progress": "latest",
         "apache-server-configs": "latest",
-        "bluebird": "latest",
         "gulp": "latest",
         "gulp-if": "latest",
         "gulp-shell": "latest",
         "gulp-watch": "latest",
         "gulp-inject": "latest",
         "gulp-sync": "latest",
+        "gulp-sort": "latest",
         "gulp-prompt": "latest",
         "gulp-load-plugins": "latest",
         "gulp-jshint": "latest",
