--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
         "gulp-uncss": "latest",
         "gulp-flatten": "latest",
         "gulp-rename": "latest",
+        "gulp-replace": "latest",
+        "gulp-sitemap": "latest",
+        "gulp-manifest": "latest",
         "errorhandler": "latest",
         "morgan": "latest",
         "jshint-stylish": "latest",
